force-app/main/default/objects/OperationCheckMaster__c/OperationCheckMaster__c.object-meta.xml
<CustomObject>
    <label>業務チェックマスタ</label>
    <nameField>
        <displayFormat>OC-{000000000}</displayFormat>
        <label>業務チェックマスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>