force-app/main/default/objects/OperationCheckMaster__c/fields/CheckFieldsDescription__c.field-meta.xml
<CustomField>
    <fullName>CheckFieldsDescription__c</fullName>
    <label>チェック項目の説明</label>
    <type>TextArea</type>
</CustomField>