force-app/main/default/objects/OperationCheckMaster__c/fields/CorporateHousingRegulationPattern__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulationPattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定パターン</label>
    <referenceTo>CorporateHousingRegulationPattern__c</referenceTo>
    <relationshipLabel>業務チェックマスタ</relationshipLabel>
    <relationshipName>CorporateHousingRegulationPattern_CHR</relationshipName>
    <type>Lookup</type>
</CustomField>