force-app/main/default/objects/OperationCheckMaster__c/fields/RegulationCheckField__c.field-meta.xml
<CustomField>
    <fullName>RegulationCheckField__c</fullName>
    <label>規定チェック項目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入居日/契約日</fullName>
            </value>
            <value>
                <fullName>下見希望日</fullName>
            </value>
            <value>
                <fullName>物件タイプ</fullName>
            </value>
            <value>
                <fullName>物件構造</fullName>
            </value>
            <value>
                <fullName>家賃</fullName>
            </value>
            <value>
                <fullName>間取</fullName>
            </value>
            <value>
                <fullName>面積</fullName>
            </value>
            <value>
                <fullName>築年数</fullName>
            </value>
            <value>
                <fullName>更新料</fullName>
            </value>
            <value>
                <fullName>違約金</fullName>
            </value>
            <value>
                <fullName>借主解約予告</fullName>
            </value>
            <value>
                <fullName>アスベスト</fullName>
            </value>
            <value>
                <fullName>耐震上の問題</fullName>
            </value>
            <value>
                <fullName>宅地造成対象地域</fullName>
            </value>
            <value>
                <fullName>土砂災害警戒区域</fullName>
            </value>
            <value>
                <fullName>津波災害警戒区域</fullName>
            </value>
            <value>
                <fullName>建物状況調査</fullName>
            </value>
            <value>
                <fullName>敷金</fullName>
            </value>
            <value>
                <fullName>礼金</fullName>
            </value>
            <value>
                <fullName>UR物件</fullName>
            </value>
            <value>
                <fullName>駐車場</fullName>
            </value>
            <value>
                <fullName>火災保険</fullName>
            </value>
            <value>
                <fullName>鍵交換</fullName>
            </value>
            <value>
                <fullName>消毒費</fullName>
            </value>
            <value>
                <fullName>礼金（支払者）</fullName>
            </value>
            <value>
                <fullName>給与控除立替</fullName>
            </value>
            <value>
                <fullName>契約事務手数料</fullName>
            </value>
            <value>
                <fullName>リーガルチェック</fullName>
            </value>
            <value>
                <fullName>条文追加内容</fullName>
            </value>
            <value>
                <fullName>ICロック電池</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>