force-app/main/default/objects/OperationCheckMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CheckFieldsName__c</columns>
    <columns>CheckFieldsDescription__c</columns>
    <columns>RegulationCheckField__c</columns>
    <columns>CheckTarget__c</columns>
    <columns>AutoCheckErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>